<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?attr/selectableItemBackground"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_marginStart="12dp"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_vh_latitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/sample_lat"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_vh_longitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/sample_long"
                android:textSize="12sp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_vh_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_weight="0.5"
            android:gravity="right"
            android:text="@string/title_hint"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@color/SecondaryColor_3" />

</LinearLayout>